fastcgi_params should be placed in each location

--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,7 @@ http {
   fastcgi_keep_conn on;
   fastcgi_buffering off;
   fastcgi_max_temp_file_size 100m;
-  include fastcgi_params;
+  # include fastcgi_params;
 
   server {
     rewrite ^ http://www.$http_host$request_uri? permanent;
