--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,10 @@
-[2~[2~# tmux.conf
+# tmux.conf
 set -g window-status-current-fg white
 set -g base-index 1
 set -g pane-base-index 1
-set -g default-terminal "xterm-256color"
+set -g default-terminal xterm-256color
 setw -g xterm-keys on
-set -g prefix "C-_"
-bind-key "C-_" command-prompt
-bind-key -n "C-@" copy-mode
+set -g prefix C-_
+bind-key C-_ command-prompt
+set -g prefix2 IC
+bind-key IC command-prompt
