--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,11 @@ http {
   fastcgi_max_temp_file_size 100m;
   # include fastcgi_params;
 
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!eNULL:!NULL:!DH:!EDH:!AESGCM;
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+
   server {
     rewrite ^ http://www.$http_host$request_uri? permanent;
   }
