--- a/nginx.conf
+++ b/nginx.conf
@@ -47,11 +47,15 @@ http {
   # include fastcgi_params;
 
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!eNULL:!NULL:!DH:!EDH:!AESGCM;
+  ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
   ssl_prefer_server_ciphers on;
   ssl_session_cache shared:SSL:10m;
+  ssl_certificate ;
+  ssl_certificate_key ;
 
   server {
+    listen 80;
+    listen 443 ssl spdy;
     rewrite ^ http://www.$http_host$request_uri? permanent;
   }
 }
