--- a/tmux.conf
+++ b/tmux.conf
@@ -10,29 +10,22 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-set -g escape-time 0
+set -s escape-time 0
 
 set -g prefix C-a
 set -g prefix2 F12
-bind C-a last-window
-bind a send-prefix
+bind C-a send-prefix
+bind a last-window
+bind F12 last-window
 bind ` last-pane
 
-bind r source-file ~/.tmux.conf \; display-message "Reloaded."
-
-bind | split-window -h
-bind - split-window -v
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
+bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
+bind y setw -g synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
 bind -n F11 copy-mode
 
 setw -g mode-keys vi
 
-setw -g mode-mouse on
+setw -g mode-mouse copy-mode
 set -g mouse-select-window on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
