--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@
 set -g default-terminal "screen-256color"
 
 set -g status-utf8 on
+setw -g utf8 on
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -10,7 +11,7 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-set -s escape-time 0
+set -sg escape-time 1
 
 set -g prefix C-a
 set -g prefix2 F12
@@ -18,12 +19,14 @@ bind C-a send-prefix
 bind a last-window
 bind F12 last-window
 bind ` last-pane
+unbind C-b
 
 bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
 bind y setw -g synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
 bind -n F11 copy-mode
 
 setw -g mode-keys vi
+bind-key -t vi-copy v begin-selection
 
 setw -g mode-mouse copy-mode
 set -g mouse-select-window on
