--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ set -g status-fg white
 setw -g window-status-current-bg green
 setw -g window-status-current-fg black
 
-set -g pane-border-fg colour235
+set -g pane-border-fg blue
 set -g pane-active-border-fg green
 
 set -g message-bg colour235
