--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ bind ` last-pane
 unbind C-b
 
 bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
-bind y setw -g synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
+bind y setw synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
 bind -n F11 copy-mode
 
 setw -g mode-keys vi
