--- a/tmux.conf
+++ b/tmux.conf
@@ -33,7 +33,7 @@ set -g mouse-select-window on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 
-set -g status-bg colour235
+set -g status-bg colour240
 set -g status-fg white
 
 setw -g window-status-current-bg green
@@ -42,8 +42,8 @@ setw -g window-status-current-fg black
 set -g pane-border-fg blue
 set -g pane-active-border-fg green
 
-set -g message-bg colour235
+set -g message-bg colour240
 set -g message-fg white
 
-set -g status-left ' '
+set -g status-left ' TMUX  '
 set -g status-right ' '
