--- a/tmux.conf
+++ b/tmux.conf
@@ -28,10 +28,7 @@ bind -n F11 copy-mode
 setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 
-setw -g mode-mouse copy-mode
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+setw -g mouse on
 
 set -g status-bg colour240
 set -g status-fg white
