--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,10 @@ bind ` last-pane
 unbind C-b
 
 bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
-bind y setw synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
+bind * setw synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
+bind + select-layout tiled
+bind _ select-layout even-vertical
+bind | select-layout even-horizontal
 bind -n F11 copy-mode
 
 setw -g mode-keys vi
@@ -36,7 +39,7 @@ set -g status-fg white
 setw -g window-status-current-bg green
 setw -g window-status-current-fg black
 
-set -g pane-border-fg blue
+set -g pane-border-fg colour240
 set -g pane-active-border-fg green
 
 set -g message-bg colour240
