--- a/tmux.conf
+++ b/tmux.conf
@@ -33,17 +33,17 @@ bind-key -t vi-copy v begin-selection
 
 setw -g mouse on
 
-set -g status-bg colour240
+set -g status-bg colour8
 set -g status-fg white
 
 setw -g window-status-current-bg green
 setw -g window-status-current-fg black
 
-set -g pane-border-fg colour240
+set -g pane-border-fg colour8
 set -g pane-active-border-fg green
 
-set -g message-bg colour240
+set -g message-bg colour8
 set -g message-fg white
 
-set -g status-left ' TMUX  '
-set -g status-right ' '
+set -g status-left ' TMUX '
+set -g status-right ' C-A|F12 '
