--- a/tmux.conf
+++ b/tmux.conf
@@ -13,13 +13,9 @@ set -g visual-activity on
 
 set -sg escape-time 1
 
-set -g prefix C-a
 set -g prefix2 F12
-bind C-a send-prefix
-bind a last-window
 bind F12 last-window
 bind ` last-pane
-unbind C-b
 
 bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
 bind * setw synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
@@ -46,4 +42,4 @@ set -g message-bg colour8
 set -g message-fg white
 
 set -g status-left ' TMUX '
-set -g status-right ' C-A|F12 '
+set -g status-right ' #{?client_prefix,#[reverse],}C-B|F12#{?client_prefix,#[noreverse],} '
