Change prefix key

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,4 +42,4 @@ set -g message-bg colour8
 set -g message-fg white
 
 set -g status-left ' TMUX '
-set -g status-right ' #{?client_prefix,#[reverse],}C-B|F12#{?client_prefix,#[noreverse],} '
+set -g status-right ' #{?client_prefix,#[reverse],}^B,F12#{?client_prefix,#[noreverse],} '
