--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,8 @@
 
 set -g default-terminal "screen-256color"
 
-set -g status-utf8 on
-setw -g utf8 on
+# set -g status-utf8 on
+# setw -g utf8 on
 
 set -g base-index 1
 setw -g pane-base-index 1
