--- a/tmux.conf
+++ b/tmux.conf
@@ -18,10 +18,8 @@ bind F12 last-window
 bind ` last-pane
 
 bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
-bind * setw synchronize-panes \; display-message "Sync: #{?pane_synchronized,on,off}"
-bind + select-layout tiled
-bind _ select-layout even-vertical
-bind | select-layout even-horizontal
+bind * setw synchronize-panes on \; display-message "Sync: #{?pane_synchronized,on,off}"
+bind @ setw synchronize-panes off \; display-message "Sync: #{?pane_synchronized,on,off}"
 bind -n F11 copy-mode
 
 setw -g mode-keys vi
