--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ bind @ setw synchronize-panes off \; display-message "Sync: #{?pane_synchronized
 bind -n F11 copy-mode
 
 setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy v begin-selection
 
 setw -g mouse on
 
