--- a/tmux.conf
+++ b/tmux.conf
@@ -13,14 +13,8 @@ set -g visual-activity on
 
 set -sg escape-time 1
 
-set -g prefix2 F12
-bind F12 last-window
-bind ` last-pane
-
-bind C-r source-file ~/.tmux.conf \; display-message "Reloaded."
-bind * setw synchronize-panes on \; display-message "Sync: #{?pane_synchronized,on,off}"
-bind @ setw synchronize-panes off \; display-message "Sync: #{?pane_synchronized,on,off}"
-bind -n F11 copy-mode
+bind C-r source-file ~/.tmux.conf
+bind C-y setw synchronize-panes
 
 setw -g mode-keys vi
 # bind-key -t vi-copy v begin-selection
@@ -39,5 +33,5 @@ set -g pane-active-border-fg green
 set -g message-bg colour8
 set -g message-fg white
 
-set -g status-left ' TMUX '
-set -g status-right ' #{?client_prefix,#[reverse],}^B,F12#{?client_prefix,#[noreverse],} '
+set -g status-left ' #{?pane_synchronized,SYNC ,}'
+set -g status-right ' #{?client_prefix,#[reverse]TMUX#[noreverse],TMUX} '
