--- a/tmux.conf
+++ b/tmux.conf
@@ -13,8 +13,8 @@ set -g visual-activity on
 
 set -sg escape-time 1
 
-bind C-r source-file ~/.tmux.conf
-bind C-y setw synchronize-panes
+bind R source-file ~/.tmux.conf
+bind y setw synchronize-panes
 
 setw -g mode-keys vi
 # bind-key -t vi-copy v begin-selection
