--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-set -sg escape-time 1
+# set -sg escape-time 1
 
 bind R source-file ~/.tmux.conf
 bind y setw synchronize-panes
@@ -35,3 +35,5 @@ set -g message-fg white
 
 set -g status-left ' #{?pane_synchronized,SYNC ,}'
 set -g status-right ' #{?client_prefix,#[reverse]TMUX#[noreverse],TMUX} '
+
+set -g message-style bg=blue,fg=white
