--- a/tmux.conf
+++ b/tmux.conf
@@ -24,14 +24,14 @@ setw -g mouse on
 set -g status-bg colour8
 set -g status-fg white
 
-setw -g window-status-current-bg green
-setw -g window-status-current-fg black
+# setw -g window-status-current-bg green
+# setw -g window-status-current-fg black
 
-set -g pane-border-fg colour8
-set -g pane-active-border-fg green
+# set -g pane-border-fg colour8
+# set -g pane-active-border-fg green
 
-set -g message-bg colour8
-set -g message-fg white
+# set -g message-bg colour8
+# set -g message-fg white
 
 set -g status-left ' #{?pane_synchronized,SYNC ,}'
 set -g status-right ' #{?client_prefix,#[reverse]TMUX#[noreverse],TMUX} '
