--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ set -g visual-activity on
 
 # set -sg escape-time 1
 
-bind R source-file ~/.tmux.conf
+bind R source ~/.tmux.conf
 bind y setw synchronize-panes
 
 setw -g mode-keys vi
@@ -22,9 +22,10 @@ setw -g mode-keys vi
 setw -g mouse on
 
 set -g status-style bg=black,fg=green
-setw -g window-status-current-style bg=green,fg=black
-setw -g window-status-activity-style bg=black,fg=green,bold
+setw -g window-status-current-style reverse
+setw -g window-status-bell-style bold
+setw -g window-status-activity-style fg=yellow
 set -g message-style bg=blue,fg=white
 
-set -g status-left ' #{?pane_synchronized,SYNC ,}'
-set -g status-right ' #{?client_prefix,#[reverse]TMUX#[noreverse],TMUX} '
+set -g status-left '#[reverse] #{?pane_synchronized,SYNC,TMUX} #[noreverse] '
+set -g status-right '#[reverse] #{?client_prefix,PREFIX,READY} #[noreverse]'
