--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,9 @@ setw -g mode-keys vi
 
 setw -g mouse on
 
-set -g status-style bg=black,fg=green
-setw -g window-status-current-style reverse
+set -g status-position top
+set -g status-style fg=green
+setw -g window-status-current-style bg=red,fg=white
 setw -g window-status-bell-style bold
 setw -g window-status-activity-style fg=yellow
 set -g message-style bg=blue,fg=white
