--- a/tmux.conf
+++ b/tmux.conf
@@ -2,31 +2,30 @@
 
 set -g default-terminal "screen-256color"
 
-# set -g status-utf8 on
-# setw -g utf8 on
-
 set -g base-index 1
 setw -g pane-base-index 1
 
 setw -g monitor-activity on
 set -g visual-activity on
 
-# set -sg escape-time 1
-
 bind R source ~/.tmux.conf
 bind y setw synchronize-panes
 
 setw -g mode-keys vi
-# bind-key -t vi-copy v begin-selection
 
 setw -g mouse on
 
 set -g status-position top
-set -g status-style fg=green
-setw -g window-status-current-style bg=red,fg=white
+set -g status-style bg=colour235,fg=green
+setw -g window-status-current-style bg=green,fg=white
 setw -g window-status-bell-style bold
 setw -g window-status-activity-style fg=yellow
+set -g window-style bg=brightblack
+set -g window-active-style bg=default
+set -g pane-border-style bg=brightblack,fg=white
+set -g pane-active-border-style bg=brightblack,fg=green
 set -g message-style bg=blue,fg=white
 
-set -g status-left '#[reverse] #{?pane_synchronized,SYNC,TMUX} #[noreverse] '
-set -g status-right '#[reverse] #{?client_prefix,PREFIX,READY} #[noreverse]'
+set -g status-left '#{?client_prefix,#[reverse],} #{?pane_synchronized,SYNC,TMUX} #{?client_prefix,#[noreverse],} '
+set -g status-right ' #S/#I/#P %T '
+set -g status-interval 1
