--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,10 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-bind R source ~/.tmux.conf
+set -g prefix2 F10
+
+bind F10 send-prefix -2
+bind r source ~/.tmux.conf
 bind y setw synchronize-panes
 
 setw -g mode-keys vi
@@ -16,7 +19,8 @@ setw -g mode-keys vi
 setw -g mouse on
 
 set -g status-position top
-set -g status-style bg=colour235,fg=green
+set -g status-style bg=brightblack,fg=green
+setw -g window-status-style fg=white
 setw -g window-status-current-style bg=green,fg=white
 setw -g window-status-bell-style bold
 setw -g window-status-activity-style fg=yellow
