--- a/tmux.conf
+++ b/tmux.conf
@@ -8,9 +8,19 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-set -g prefix2 F10
+bind -n F1 select-window -t :=1
+bind -n F2 select-window -t :=2
+bind -n F3 select-window -t :=3
+bind -n F4 select-window -t :=4
+bind -n F5 select-window -t :=5
+bind -n F6 select-window -t :=6
+bind -n F7 select-window -t :=7
+bind -n F8 select-window -t :=8
+bind -n F9 select-window -t :=9
+bind -n F10 select-window -t :=10
+bind -n F11 copy-mode
+bind -n F12 setw synchronize-panes
 
-bind F10 send-prefix -2
 bind r source ~/.tmux.conf
 bind y setw synchronize-panes
 
