--- a/tmux.conf
+++ b/tmux.conf
@@ -34,8 +34,8 @@ setw -g window-status-style fg=white
 setw -g window-status-current-style bg=green,fg=white
 setw -g window-status-bell-style bold
 setw -g window-status-activity-style fg=yellow
-set -g pane-border-style bg=brightblack,fg=white
-set -g pane-active-border-style bg=brightblack,fg=green
+set -g pane-border-style fg=brightblack
+set -g pane-active-border-style fg=green
 set -g message-style bg=blue,fg=white
 
 set -g status-left '#{?client_prefix,#[reverse],} #{?pane_synchronized,SYNC,TMUX} #{?client_prefix,#[noreverse],} '
