--- a/tmux.conf
+++ b/tmux.conf
@@ -8,16 +8,16 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-bind -n F1  if 'tmux selectw -t :=1 ' '' 'neww -t :=1 '
-bind -n F2  if 'tmux selectw -t :=2 ' '' 'neww -t :=2 '
-bind -n F3  if 'tmux selectw -t :=3 ' '' 'neww -t :=3 '
-bind -n F4  if 'tmux selectw -t :=4 ' '' 'neww -t :=4 '
-bind -n F5  if 'tmux selectw -t :=5 ' '' 'neww -t :=5 '
-bind -n F6  if 'tmux selectw -t :=6 ' '' 'neww -t :=6 '
-bind -n F7  if 'tmux selectw -t :=7 ' '' 'neww -t :=7 '
-bind -n F8  if 'tmux selectw -t :=8 ' '' 'neww -t :=8 '
-bind -n F9  if 'tmux selectw -t :=9 ' '' 'neww -t :=9 '
-bind -n F10 displayp -d 0
+bind -n F1 selectw -t :=1
+bind -n F2 selectw -t :=2
+bind -n F3 selectw -t :=3
+bind -n F4 selectw -t :=4
+bind -n F5 selectw -t :=5
+bind -n F6 selectw -t :=6
+bind -n F7 selectw -t :=7
+bind -n F8 selectw -t :=8
+bind -n F9 selectw -t :=9
+bind -n F10 choose-tree
 bind -n F11 resizep -Z
 bind -n F12 setw synchronize-panes
 
@@ -38,6 +38,6 @@ set -g pane-border-style fg=brightblack
 set -g pane-active-border-style fg=green
 set -g message-style bg=blue,fg=white
 
-set -g status-left '#{?client_prefix,#[reverse],} #{?pane_synchronized,SYNC,TMUX} #{?client_prefix,#[noreverse],} '
+set -g status-left '#{?client_prefix,#[bg=white],} #{?pane_synchronized,#[fg=red]SYNC#[fg=default],TMUX} #{?client_prefix,#[bg=default],} '
 set -g status-right ' #S/#I/#P %T '
 set -g status-interval 1
